--- a/scripts/summary_classifiers.ipynb
+++ b/scripts/summary_classifiers.ipynb
@@ -531,7 +531,7 @@
     "\n",
     "logo_height = ax_bar_bbox.height/len(df_plot)\n",
     "logo_width = 0.25\n",
-    "for i, (concept, g) in enumerate(zip(df_plot.concept.tolist(), gs3)):\n",
+    "for i, (concept, g) in enumerate(zip(reversed(df_plot.concept.tolist()), gs3)):\n",
     "    ax3 = plt.subplot(g)\n",
     "    ax3.set_position([0.71, ax_bar_bbox.y0+i*logo_height, logo_width+0.01, logo_height])\n",
     "    if concept is not None:\n",
