--- a/scripts/compute_tcav_v2_pwm.py.ipynb
+++ b/scripts/compute_tcav_v2_pwm.py.ipynb
@@ -887,8 +887,8 @@
     "        fig = plt.figure(figsize=(13, 8))\n",
     "        sfigs = fig.subfigures(2, 1)\n",
     "        \n",
-    "        plt.rc('xtick', labelsize=10/np.log(len(dfs_merge)))\n",
-    "        plt.rc('ytick', labelsize=10/np.log(len(dfs_merge)))\n",
+    "        plt.rc('xtick', labelsize=50/np.log(len(dfs_merge)))\n",
+    "        plt.rc('ytick', labelsize=50/np.log(len(dfs_merge)))\n",
     "        \n",
     "        matrix_similarity = cosine_similarity(cavs_stack.detach().numpy())\n",
     "        cm = sns.clustermap(matrix_similarity, xticklabels=False, yticklabels=False, cmap='bwr',\n",
@@ -931,7 +931,7 @@
     "        gs3 = gridspec.GridSpec(len(cavs_keys_reordered), 1)\n",
     "\n",
     "        logo_height = heatmap_bbox.height/len(cavs_keys_reordered)\n",
-    "        for i, (cav_key, g) in enumerate(zip(cavs_keys_reordered, gs3)):\n",
+    "        for i, (cav_key, g) in enumerate(zip(reversed(cavs_keys_reordered), gs3)):\n",
     "            ax3 = plt.subplot(g)\n",
     "            ax3.set_position([0.71, heatmap_bbox.y0+i*logo_height, logo_width+0.01, logo_height])\n",
     "            if cav_key is not None:\n",
